# embassy-microbit

./: Cargo.toml  build.rs  rust-toolchain.toml
.cargo/: config.toml
examples/: blink.rs  brightness.rs  dot.rs  scroll_text.rs  smiley.rs  uart_echo.rs  view_chars.rs  wave.rs
src/: button.rs  display.rs  lib.rs  pins.rs
src/pins/: mod.rs  v1.rs  v2.rs
