[package]
name = "embassy-microbit"
version = "0.1.0"
authors = ["Liam Murphy <liampm32@gmail.com>"]
edition = "2021"

[dependencies]
atomic-polyfill = "0.1.5"
cortex-m-rt = "0.7.0"
critical-section = "0.2.5"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
embedded-hal = "0.2.6"
once_cell = { version = "1.8.0", default-features = false }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[dependencies.embassy]
git = "https://github.com/Liamolucko/embassy.git"
branch = "nrf51-2"

[dependencies.embassy-hal-common]
git = "https://github.com/Liamolucko/embassy.git"
branch = "nrf51-2"

[target.thumbv6m-none-eabi.dependencies.embassy-nrf]
git = "https://github.com/Liamolucko/embassy.git"
branch = "nrf51-2"
features = ["time-driver-rtc1", "nrf51", "unstable-pac"]

[target.thumbv7em-none-eabihf.dependencies.embassy-nrf]
git = "https://github.com/Liamolucko/embassy.git"
branch = "nrf51-2"
features = ["time-driver-rtc1", "nrf52833", "unstable-pac"]

[profile.release]
debug = 2 # defmt needs debug info to show line numbers

[dev-dependencies]
libm = "0.2.1"
